<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <developers>
        <developer>
            <id>lukas</id>
            <name>Lukas Krecan</name>
            <email>lukas@krecan.net</email>
        </developer>
    </developers>

    <groupId>net.javacrumbs.shedlock</groupId>
    <artifactId>shedlock-parent</artifactId>
    <packaging>pom</packaging>
    <version>5.16.1-SNAPSHOT</version>
    <modules>
        <module>shedlock-bom</module>
        <module>shedlock-core</module>
        <module>cdi/shedlock-cdi-vintage</module>
        <module>cdi/shedlock-cdi</module>
        <module>cdi/test/quarkus-test</module>
        <module>micronaut/shedlock-micronaut</module>
        <module>micronaut/shedlock-micronaut4</module>
        <module>micronaut/test/micronaut-jdbc</module>
        <module>micronaut/test/micronaut-jdbc-template</module>
        <module>micronaut/test/micronaut4-jdbc</module>
        <module>micronaut/test/micronaut4-jdbc-template</module>
        <module>spring/shedlock-spring</module>
        <module>spring/test/shedlock-springboot-old-test</module>
        <module>spring/test/shedlock-springboot-test</module>
        <module>spring/test/shedlock-springboot-future-test</module>
        <module>spring/test/shedlock-springboot-sleuth-test</module>
        <module>spring/test/shedlock-springboot-kotlin-test</module>
        <module>spring/test/shedlock-testng-test</module>
        <module>shedlock-test-support</module>
        <module>providers/etcd/shedlock-provider-etcd-jetcd</module>
        <module>providers/hazelcast/shedlock-provider-hazelcast4</module>
        <module>providers/jdbc/shedlock-test-support-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jdbc-internal</module>
        <module>providers/jdbc/shedlock-provider-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jooq</module>
        <module>providers/jdbc/shedlock-provider-jdbc-template</module>
        <module>providers/jdbc/shedlock-provider-jdbc-micronaut</module>
        <module>providers/r2dbc/shedlock-provider-r2dbc</module>
        <module>providers/mongo/shedlock-provider-mongo</module>
        <module>providers/mongo/shedlock-provider-mongo-reactivestreams</module>
        <module>providers/neo4j/shedlock-provider-neo4j</module>
        <module>providers/elasticsearch/shedlock-provider-elasticsearch8</module>
        <module>providers/opensearch/shedlock-provider-opensearch</module>
        <module>providers/couchbase/shedlock-provider-couchbase-javaclient3</module>
        <module>providers/zookeeper/shedlock-provider-zookeeper-curator</module>
        <module>providers/redis/shedlock-provider-redis-jedis4</module>
        <module>providers/redis/shedlock-provider-redis-spring</module>
        <module>providers/redis/shedlock-provider-redis-quarkus2</module>
        <module>providers/dynamodb/shedlock-provider-dynamodb2</module>
        <module>providers/cassandra/shedlock-provider-cassandra</module>
        <module>providers/consul/shedlock-provider-consul</module>
        <module>providers/arangodb/shedlock-provider-arangodb</module>
        <module>providers/ignite/shedlock-provider-ignite</module>
        <module>providers/inmemory/shedlock-provider-inmemory</module>
        <module>providers/memcached/shedlock-provider-memcached-spy</module>
        <module>providers/datastore/shedlock-provider-datastore</module>
        <module>providers/spanner/shedlock-provider-spanner</module>
    </modules>

    <properties>
        <spring.version>6.1.13</spring.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>17</jdk.version>
        <spring-boot-current.version>3.3.4</spring-boot-current.version>
        <junit.ver>5.11.2</junit.ver>
        <test-containers.ver>1.20.2</test-containers.ver>
        <kotlin.ver>2.0.21</kotlin.ver>
        <micronaut3.version>3.10.4</micronaut3.version>
        <micronaut3-data.version>3.9.7</micronaut3-data.version>
        <micronaut4.version>4.6.3</micronaut4.version>
        <micronaut4.validation.version>4.8.0</micronaut4.validation.version>
        <micronaut4-data.version>4.8.1</micronaut4-data.version>
        <logback.ver>1.5.11</logback.ver>
        <awaitility.ver>4.2.2</awaitility.ver>
        <assertj.ver>3.26.3</assertj.ver>
        <mockito.ver>5.14.2</mockito.ver>
        <slf4j.ver>2.0.16</slf4j.ver>
        <fork.count>1</fork.count>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <palantirJavaFormat><version>2.38.0</version></palantirJavaFormat>
                        <removeUnusedImports />
                    </java>
                    <kotlin>
                        <ktfmt>
                            <maxWidth>120</maxWidth>
                            <style>KOTLINLANG</style>
                        </ktfmt>
                    </kotlin>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${jdk.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.6</version>
                <configuration>
                    <header>header.txt</header>
                    <excludes>
                        <exclude>LICENSE.txt</exclude>
                        <exclude>*.xml</exclude>
                        <exclude>*.properties</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <forkCount>${fork.count}</forkCount>
                    <argLine>-Xmx512m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.3</version>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.17.1</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>permit-illegal-access</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>--illegal-access=permit</argLine>
                            <forkCount>${fork.count}</forkCount>
                            <argLine>-Xmx512m</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git@github.com:lukas-krecan/ShedLock.git</connection>
        <developerConnection>scm:git:git@github.com:lukas-krecan/ShedLock.git</developerConnection>
        <url>scm:git:git@github.com:lukas-krecan/ShedLock.git</url>
    </scm>
</project>
